--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,5 +1,9 @@
-$color_primary: "#E63946";
-$color_secondary: "#FCFCFC";
-$color_text_primary: "#000000";
-$color_text_secondary: "#5F5F5F";
-$color_background: "FFFFFF";
+$color_primary: #E63946;
+$color_secondary: #FCFCFC;
+$color_text_primary: #000000;
+$color_text_secondary: #5F5F5F;
+$color_background: #FFFFFF;
+
+$margin_big: 40px;
+$margin_medium: 30px;
+$margin_small: 15px;
