--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -51,6 +51,7 @@
 .OnlyOptionsDiv {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     max-width: 550px;
     width: 80%;
     margin-bottom: $margin_medium;
